[package]
name = "cmli"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause-Patent"

[dependencies]
cmli-derive = { version = "=0.1.0", path = "cmli-derive" }
indexmap = "2.7.1"
paste = "1.0.15"
sym-gen = { git = "https://github.com/lccc-project/sym-gen.git" }

[features]
# Non-arch feature list
# Keep Synced with variable in `build.rs` to avoid warnings
error-track-caller = []
debug-error-track-caller = []
default-archs = ["x86"]
all-archs = ["default-archs"]
all-timings = ["x86-timings"]

# Architectures
x86 = []
x86-timings = []

[workspace]
members = ["cmli-derive"]
